# jx3-tools

./: .bumpp.config.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  bump.config.cjs  components.d.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.app.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml  windows-build.yml  windows-test.yml
docs/: RELEASE.md
docs/superpowers/plans/: 2026-06-10-ui-redesign.md
docs/superpowers/specs/: 2026-06-10-ui-redesign-design.md
src/: App.vue
src-tauri/: Cargo.toml  app.manifest  build.rs  jx3-tools.manifest  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  error.rs  lib.rs
src-tauri/src/commands/: cloud.rs  hotkey.rs  keyboard.rs  mac.rs  mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/keyboard/: mod.rs
src-tauri/src/mac_addr/: mod.rs
src-tauri/src/services/: keyboard.rs  mod.rs  plugin_data.rs
src-tauri/src/services/cloud/: config.rs  mod.rs  pack.rs  sync.rs  webdav.rs
src-tauri/src/services/hotkey/: config.rs  driver.rs  keymap.rs  keys.rs  listener.rs  mod.rs  shortcuts.rs  types.rs  window.rs
src-tauri/src/services/mac/: mod.rs  scripts.rs
src-tauri/src/services/mac/scripts/: change_mac.ps1  common.ps1  get_adapter.ps1  get_mac_info.ps1  restart_adapter.ps1  restore_mac.ps1  set_network_address.ps1
src-tauri/windows/: hooks.nsh
src/assets/: theme.css
src/components/layout/: MainLayout.vue  PageHeader.vue
src/components/layout/__tests__/: PageHeader.spec.ts
src/composables/: index.ts  useCloud.ts  useKeyboard.ts  useMac.ts  useRecentOps.ts  useTheme.ts
src/composables/__tests__/: useCloud.spec.ts  useKeyboard.spec.ts  useRecentOps.spec.ts  useTheme.spec.ts
src/router/: index.ts
src/services/: cloud.service.ts  hotkey.service.ts  index.ts  keyboard.service.ts  mac.service.ts
src/stores/: hotkey.ts
src/theme/: naive.ts
src/types/: cloud.ts  common.ts  hotkey.ts  index.ts  keyboard.ts  mac.ts
src/types/shims/: shuimo-ui.d.ts
src/utils/: error.ts
src/views/hotkey/: HotkeyView.vue
src/views/keyboard/: KeyboardView.vue
src/views/keyboard/components/: CloudSync.vue  Result.vue  SourceTree.vue  TemplateList.vue
src/views/mac-id/: MacId.vue
