[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
regex = "1.10.2"
dirs = "5.0.1"
mac_address = "1.1.5"
if-addrs = "0.11.0"
rand = "0.8.5"
# Windows API 相关依赖
windows = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_System_Registry",
  "Win32_System_Services"
] }

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "test_mac_address"
path = "src/bin/test_mac_address.rs"
