[package]
name = "jx3-tools"
version = "2.0.0"
description = "JX3 Tools - Desktop utilities for JX3 game"
authors = [ "jiabinbin" ]
license = "MIT"
repository = "https://github.com/jiabinbin/jx3-tools"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
] }
interception = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-global-shortcut = "2"
dirs = "6.0"
mac_address = "1.1.8"
thiserror = "2.0"

[[bin]]
name = "app"
path = "src/main.rs"
