[package]
name = "jx3-tools"
version = "2.1.0"
description = "JX3 Tools - Desktop utilities for JX3 game"
authors = [ "jiabinbin" ]
license = "MIT"
repository = "https://github.com/jiabinbin/jx3-tools"
edition = "2021"
rust-version = "1.77.2"
default-run = "SaltedFish"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_System_Registry",
  "Win32_System_Services",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_Devices_DeviceAndDriverInstallation",
] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
dirs = "6.0"
getrandom = "0.3"
mac_address = "1.1.8"
thiserror = "2.0"
encoding_rs = "0.8"
reqwest = { version = "0.13", features = [ "blocking" ] }
zip = { version = "2", default-features = false, features = [ "deflate" ] }
url = "2"

[[bin]]
name = "SaltedFish"
path = "src/main.rs"
